# PiNanoConnect

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
Resources/: Controller.sh  HMI.desktop  LaunchControllerClient.sh  LaunchControllerServer.sh  Setup.desktop  SetupController.sh
Resources/Cert/: GenerateDevCert.sh  https-web.key  https-web.pem  rootCA-key.pem  rootCA.pem
Resources/Proxy/envoy/: docker-compose.yml  envoy.yaml  envoy_win.yaml
cmake/: Submodule.cmake  VcpkgInstall.cmake
lib/: CMakeLists.txt
lib/ABElectronics/IOZero32/: ABE_IOZero32.cpp  ABE_IOZero32.h  README.md
lib/ABElectronics/IOZero32/demos/: README.md  demo-ioread.cpp  demo-iowrite.cpp
lib/ABElectronics/IOZero32/tests/: README.md
lib/ABElectronics/IOZero32/tests/testfiles/: IOZero32.cpp  README.md  get_bus_direction.cpp  get_bus_polarity.cpp  get_pin_direction.cpp  get_pin_polarity.cpp  get_port_direction.cpp  get_port_polarity.cpp  read_bus.cpp  read_pin.cpp  read_port.cpp  set_bus_direction.cpp  set_bus_polarity.cpp  set_pin_direction.cpp  set_pin_polarity.cpp  set_port_direction.cpp  set_port_polarity.cpp  write_bus.cpp  write_pin.cpp  write_port.cpp
lib/ABElectronics/UnitTest/: testlibs.h
lib/ini-parser/: INI.h
src/: CMakeLists.txt
src/Controller/: CMakeLists.txt  ControllerCommsAPIService.cpp  ControllerCommsAPIService.hpp  ControllerGateway.cpp  ControllerGateway.hpp
src/Controller.Common/: AppSettings.cpp  AppSettings.hpp  CMakeLists.txt  Controller.ini
src/Controller.Common/include/: AppSettings.h  DataTypes.h  DevicesList.h  LockFreeQueue.h
src/Controller.DataAccess/: CMakeLists.txt  QueryEngine.cpp  QueryEngine.hpp
src/Controller.DataAccess/include/: IQueryEngine.h
src/Controller.DeviceInterface/: CMakeLists.txt  DeviceInterface.cpp  DeviceInterface.hpp
src/Controller.DeviceInterface/JetsonNanoDriver/: CMakeLists.txt  NanoDriver.cpp  NanoDriver.hpp
src/Controller.DeviceInterface/JetsonNanoSimulationDriver/: CMakeLists.txt  NanoSimDriver.cpp  NanoSimDriver.hpp
src/Controller.DeviceInterface/include/: IDeviceInterface.h  IHAL.h
src/Controller.Model/: CMakeLists.txt  DeviceActions.cpp  DeviceActions.hpp  TaskScheduler.cpp  TaskScheduler.hpp
src/Controller.Model/include/: IDeviceActions.h
src/Controller.Server/: CMakeLists.txt  main.cpp
src/Controller/Proto/: Controller.proto
src/Controller/include/: IControllerGateway.h
